fix(core): restore failling test from last refactor